# GolfTrips

./: .env.example  .gitignore  CHANGES_SUMMARY.md  CLAUDE.md  OAUTH_SETUP.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  RENDER_DEPLOYMENT.md  SESSION_FIX.md  VISUAL_CHANGES.md  pyproject.toml  requirements.txt  run.sh  setup_auth.sh  start_gunicorn.sh  start_production.sh  test_session.py
docs/: BUG_FIXES.md  CHANGES.md  DATABASE_CONFIG.md  GREEN_THEME.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  MATCH_FEATURES.md  QUICK_START.md  README.md
scripts/: migrate_courses.py  migrate_data.py  migrate_to_postgres.py  run_app.sh
src/: __init__.py  app.py  auth.py  data_service.py  db_service.py  db_service_base.py  db_service_postgres.py  handicap_calculator.py  model.py
tests/: __init__.py  test_data_service.py  test_fixes.py  test_handicap_calculator.py  test_integration.py  test_match_features.py  verify_setup.py
