[project]
name = "golftrips"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.2.0",
    "dash-bootstrap-components>=1.5.0",
    "dash[compress]>=2.14.0",
    "flask>=2.3.0",
    "gunicorn>=21.0.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "psycopg2-binary>=2.9.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]
